--- a/dhall/dhall.cabal
+++ b/dhall/dhall.cabal
@@ -477,7 +477,7 @@ Library
         aeson-pretty                               < 0.9 ,
         ansi-terminal               >= 0.6.3.1  && < 0.12,
         atomic-write                >= 0.2.0.7  && < 0.3 ,
-        bytestring                                 < 0.11,
+        bytestring                                 < 0.12,
         case-insensitive                           < 1.3 ,
         cborg                       >= 0.2.0.0  && < 0.3 ,
         cborg-json                  >= 0.2.2.0  && < 0.3 ,
@@ -657,7 +657,7 @@ Test-Suite tasty
         Dhall.Test.Util
     Build-Depends:
         base                      >= 4        && < 5   ,
-        bytestring                               < 0.11,
+        bytestring                                     ,
         cborg                     >= 0.2.0.0  && < 0.3 ,
         containers                                     ,
         data-fix                                       ,
